demo/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: morpheus-proxy-demo
  labels:
    app.kubernetes.io/part-of: morpheus-proxy-demo
    istio.io/rev: default
