demo/k8s/ms-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-b
  namespace: morpheus-proxy-demo
  labels:
    app.kubernetes.io/name: ms-b
    app.kubernetes.io/part-of: morpheus-proxy-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ms-b
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ms-b
        app.kubernetes.io/part-of: morpheus-proxy-demo
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: ms-b
          image: asia-northeast1-docker.pkg.dev/GCP_PROJECT_ID_OLD_REDACTED/morpheus-proxy-demo/ms-b:latest
          imagePullPolicy: Always
          ports:
            - name: grpc
              containerPort: 50052
          readinessProbe:
            tcpSocket:
              port: grpc
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: grpc
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ms-b
  namespace: morpheus-proxy-demo
  labels:
    app.kubernetes.io/name: ms-b
    app.kubernetes.io/part-of: morpheus-proxy-demo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ms-b
  ports:
    - name: grpc
      port: 50052
      targetPort: grpc
